Send initial sync of emc and fuel data as a configuration packet and fix initial sync of knowledge and bag data not being resolved on the client